--- a/lambda/getClientFromGoToSQS/config/config.json
+++ b/lambda/getClientFromGoToSQS/config/config.json
@@ -2,5 +2,5 @@
   "accessKeyId": "???",
   "secretAccessKey": "???",
   "region": "us-east-1",
-  "sqsQueue": "https://sqs.us-east-1.amazonaws.com/???/fila_dev_banca_dynamicsgo"
+  "sqsQueue": "https://sqs.???/fila_dev_banca_dynamicsgo"
 }
