--- a/config/environment/default.dev.yml
+++ b/config/environment/default.dev.yml
@@ -5,7 +5,6 @@ session:
 enable_new_relic: true
 
 siscom:
-  #base_url: https://186.239.238.179
   base_url: http://localhost:4321
 
   encryption_key: #???
@@ -37,7 +36,7 @@ morgan: dev
 
 integracao:
   connectionString: "???"
-  queueName: "tvglobo.go.produtobanca"
+  queueName: "???.produtobanca"
 
 week_days:
   - dom
@@ -51,7 +50,7 @@ week_days:
 # Elasticsearch configurations
 elasticsearch:
   hosts:
-    - https://search-bancadev-???.us-east-1.es.amazonaws.com/
+    - https://???
   index: banca
   users:
     index: siscom_users
@@ -69,7 +68,7 @@ elasticsearch:
     index: banca
     type: local_sponsorships
   projeto:
-      index: testeThiago
+      index: teste
 
 permission:
   digital_media_group: "digital_media"
@@ -82,11 +81,11 @@ aws:
 
 # Attachments configuration (S3)
 attachments:
-  bucket: tvg-cdap-bancaprojetos-attachments-dev
+  bucket: attachments-dev
 
 notifications:
-  broadcast_topic: arn:aws:sns:us-east-1:???:AppBancaProjetos
-  application: arn:aws:sns:us-east-1:???:app/APNS_SANDBOX/banca-dev
+  broadcast_topic: arn:???:AppBancaProjetos
+  application: arn:???:app/APNS_SANDBOX/banca-dev
   region: us-east-1
 
   msg_templates:
@@ -99,8 +98,8 @@ notifications:
       body: O Plano <%= projectName %>, criado pelo grupo <%= owner %> já está disponível para ser editado. 
 
   email_credentials:
-    key: "????"
-    secret: "????"
+    key: "???"
+    secret: "???"
 
 # Scheduled jobs
 scheduling:
@@ -128,7 +127,7 @@ scheduling:
           cron: '*/30 * * * *'
 
 mobile:
-  bucket: tvg-cdap-bancaprojetos-dev
+  bucket: banca-dev
 
 dynamo:
   enviroment: dev
@@ -140,8 +139,8 @@ crmGo:
   tipoPessoaAgencia: 7D62A70A-029C-42D8-A617-8ED5168E0D02
   #enviromentDynamo: dev
   #CRM Organization URL - HML
-  resource: https://tvggohomolog.crm.dynamics.com
-  webApiUrl: https://tvggohomolog.api.crm.dynamics.com/api/data/v8.2/
+  resource: https://homolog.crm.dynamics.com
+  webApiUrl: https://homolog.api.crm.dynamics.com/api/data/v8.2/
   #Dynamics 365 Client Id when registered in Azure - HML
   clientId: #???
   clientSecret: #???
@@ -150,8 +149,8 @@ crmGo:
   uoms: d84a42ad-56a6-4196-892f-556422b407d2 #unidade de medida principal - HML
   pricelevelId: A0741EE0-FDA9-E711-810F-E0071B714BD1 #lista de preços padrão - HML
   #CRM Organization URL - DEV
-  #resource: https://tvggodev.crm.dynamics.com
-  #webApiUrl: https://tvggodev.api.crm.dynamics.com/api/data/v8.2/ #DEV
+  #resource: https://dev.crm.dynamics.com
+  #webApiUrl: https://dev.api.crm.dynamics.com/api/data/v8.2/ #DEV
   #Dynamics 365 Client Id when registered in Azure - DEV
   #clientId: #???
   #clientSecret: #???
