--- a/lambda/enrichSponsorshipData/config/default.yml
+++ b/lambda/enrichSponsorshipData/config/default.yml
@@ -5,11 +5,9 @@ session:
 enable_new_relic: true
 
 siscom:
-  #base_url: https://186.239.238.179
-  #base_url: http://localhost:4321
-  base_url: https://siscomf2.redeglobo.com.br
+  base_url: http://localhost:4321
 
-  encryption_key: 7lA5aNSMOWdz4xAcZtSGF4atesqRgRP0
+  encryption_key: #???
   encryption_algorithm: aes-256-cbc
   password_length_limit: 8
 
@@ -27,12 +25,12 @@ log:
   level: debug
   app:
     path:
-      debug: /Users/matheus/log/logs/app/bancas_app.log
-      error:  /Users/matheus/log/logs/app/bancas_app_err.log
+      debug: /Users/log/logs/app/bancas_app.log
+      error:  /Users/log/logs/app/bancas_app_err.log
   elastic:
     path:
-      debug: /Users/matheus/log/logs/elastic/bancas_elastic.log
-      error: /Users/matheus/log/logs/elastic/bancas_elastic_err.log
+      debug: /Users/log/logs/elastic/bancas_elastic.log
+      error: /Users/log/logs/elastic/bancas_elastic_err.log
 
 morgan: dev
 
@@ -49,8 +47,7 @@ week_days:
 # Elasticsearch configurations
 elasticsearch:
   hosts:
-    - https://search-bancadev-vi4zjipsog3joneazt76znrdgy.us-east-1.es.amazonaws.com/
-    # - https://search-search-bancahomolog-knuwbsnnctiv3e35udet5yywyi.us-east-1.es.amazonaws.com
+    - https://search-???/
   index: banca
   users:
     index: siscom_users
@@ -74,17 +71,17 @@ permission:
   digital_media_group: "digital_media"
 
 aws:
-  accessKeyId: ????
-  secretAccessKey: ????
+  accessKeyId: #???
+  secretAccessKey: #???
   region: us-east-1
 
 # Attachments configuration (S3)
 attachments:
-  bucket: tvg-cdap-bancaprojetos-attachments-dev
+  bucket: bancaprojetos-attachments-dev
 
 notifications:
-  broadcast_topic: arn:aws:sns:us-east-1:????:AppBancaProjetos
-  application: arn:aws:sns:us-east-1:????:app/APNS_SANDBOX/banca-dev
+  broadcast_topic: arn:???:AppBancaProjetos
+  application: arn:???:app/APNS_SANDBOX/banca-dev
   region: us-east-1
 
   msg_templates:
@@ -97,8 +94,8 @@ notifications:
       body: O Plano <%= projectName %>, criado pelo grupo <%= owner %> já está disponível para ser editado. 
 
   email_credentials:
-    key: "????"
-    secret: "????"
+    key: "???"
+    secret: "???"
 
 
 # Scheduled jobs
@@ -108,9 +105,9 @@ scheduling:
     - name: Users
       handler: dump_users
       data:
-        API_DUMP_HOSTNAME: http://52.36.230.184
+        API_DUMP_HOSTNAME: #???
         API_FULL_DUMP_USERS_ENDPOINT: /ComercialApps.Apresentacao/api/v1/siscom-users
-        DI_APIKEY: ????
+        DI_APIKEY: #???
       options:
         jobId: user_dump
         repeat:
@@ -118,15 +115,15 @@ scheduling:
     - name: Plans
       handler: dump_plans
       data:
-        API_DUMP_HOSTNAME: http://52.36.230.184
+        API_DUMP_HOSTNAME: #???
         API_FULL_DUMP_ENDPOINT: /ComercialApps.Apresentacao/api/v1/plans/full
-        DI_APIKEY: ????
+        DI_APIKEY: #???
       options:
         jobId: plans_dump
         repeat:
           cron: '*/30 * * * *'
 
 mobile:
-  bucket: tvg-cdap-bancaprojetos-dev
+  bucket: bancaprojetos-dev
 
 
