--- a/lambda/generateNetSponsorships/config/default.yml
+++ b/lambda/generateNetSponsorships/config/default.yml
@@ -5,10 +5,9 @@ session:
 enable_new_relic: true
 
 siscom:
-  #base_url: https://186.239.238.179
   base_url: http://localhost:4321
 
-  encryption_key: 7lA5aNSMOWdz4xAcZtSGF4atesqRgRP0
+  encryption_key: #???
   encryption_algorithm: aes-256-cbc
   password_length_limit: 8
 
@@ -48,7 +47,7 @@ week_days:
 # Elasticsearch configurations
 elasticsearch:
   hosts:
-    - https://search-bancadev-???.us-east-1.es.amazonaws.com/
+    - https://search-bancadev-???
   index: banca
   users:
     index: siscom_users
@@ -78,11 +77,11 @@ aws:
 
 # Attachments configuration (S3)
 attachments:
-  bucket: tvg-cdap-bancaprojetos-attachments-dev
+  bucket: bancaprojetos-attachments-dev
 
 notifications:
-  broadcast_topic: arn:aws:sns:us-east-1:???:AppBancaProjetos
-  application: arn:aws:sns:us-east-1:???:app/APNS_SANDBOX/banca-dev
+  broadcast_topic: arn:???:AppBancaProjetos
+  application: arn:???:app/APNS_SANDBOX/banca-dev
   region: us-east-1
 
   msg_templates:
@@ -125,6 +124,6 @@ scheduling:
           cron: '*/30 * * * *'
 
 mobile:
-  bucket: tvg-cdap-bancaprojetos-dev
+  bucket: bancaprojetos-dev
 
 
